# GPR-Umbrella-Sampling-Analysis

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md  run_gpr.py  run_gpr_blueprint.py
examples/fe110_h_escape/: run_gpr.py  window_centers.txt
notebooks/: README.md
src/gpr_umbrella_1d/: __init__.py  cli.py  gpr.py  plotting.py
tests/: test_autocorrelation.py  test_gpr_synthetic.py  test_integration_example.py  test_kernels.py  test_smoke.py
